feat: adjusted userController and new api to put empresstimos

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=3000
+# PORT=3000
 
 # Opção 1: MongoDB Local (padrão)
-MONGODB_URI=mongodb://localhost:27017/biblioteca
+# MONGODB_URI=mongodb://localhost:27017/biblioteca
 
 # Opção 2: MongoDB com autenticação local (se configurado)
 # MONGODB_URI=mongodb://usuario:senha@localhost:27017/biblioteca
@@ -9,5 +9,11 @@ MONGODB_URI=mongodb://localhost:27017/biblioteca
 # Opção 3: MongoDB Atlas (serviço em nuvem) - Recomendado para iniciar rapidamente
 # MONGODB_URI=mongodb+srv://usuario:senha@cluster0.mongodb.net/biblioteca?retryWrites=true&w=majority
 
-JWT_SECRET=chave_super_secreta_biblioteca123
-JWT_EXPIRES_IN=24h
+# JWT_SECRET=chave_super_secreta_biblioteca123
+# JWT_EXPIRES_IN=24h
+
+PORT=5000
+MONGODB_URI=mongodb+srv://toninosdev_db_user:Y4fT5vvxkSwhl7XC@cluster0.srpi9kt.mongodb.net/nl-library?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=Y4fT5vvxkSwhl7XC
+JWT_EXPIRES_IN=1d
+NODE_ENV=development
