--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^4.6.2",
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
