removed sensitive data

--- a/.env
+++ b/.env
@@ -4,16 +4,16 @@
 # MONGODB_URI=mongodb://localhost:27017/biblioteca
 
 # Opção 2: MongoDB com autenticação local (se configurado)
-# MONGODB_URI=mongodb://usuario:senha@localhost:27017/biblioteca
+# MONGODB_URI=
 
 # Opção 3: MongoDB Atlas (serviço em nuvem) - Recomendado para iniciar rapidamente
-# MONGODB_URI=mongodb+srv://usuario:senha@cluster0.mongodb.net/biblioteca?retryWrites=true&w=majority
+# MONGODB_URI=
 
-# JWT_SECRET=chave_super_secreta_biblioteca123
+# JWT_SECRET=
 # JWT_EXPIRES_IN=24h
 
 PORT=5000
-MONGODB_URI=mongodb+srv://toninosdev_db_user:Y4fT5vvxkSwhl7XC@cluster0.srpi9kt.mongodb.net/nl-library?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=Y4fT5vvxkSwhl7XC
+MONGODB_URI=
+JWT_SECRET=
 JWT_EXPIRES_IN=1d
 NODE_ENV=development
